# ai-telegram-bot

./: .editorconfig  .env.example  .gitignore  main.py  pyproject.toml  pytest.ini
ai/: manager.py  registry.py
bot/: bot.py
bot/handlers/: __init__.py  booking.py  common.py  contacts.py  faq.py  menu.py  prices.py  registration.py  services.py  unknown.py
bot/keyboards/: inline_keyboards.py  keyboards.py
bot/messages/: __init__.py  messages.py
bot/middlewares/: __init__.py  db_middleware.py  yclients_middleware.py
bot/states/: states.py
bot/utils/: format.py  md_utils.py  validation.py
config/: logging.yaml  settings.py
database/: __init__.py  database.py
yclients/: __init__.py  errors.py  manager.py  utils.py  yclients.py
yclients/services/clients_service/: __init__.py  clients_service.py
yclients/services/comments_service/: __init__.py  comments_service.py
yclients/services/common/: base_service.py  enums.py  models.py
yclients/services/journal_service/: __init__.py  journal_service.py
yclients/services/newsletter_service/: __init__.py  newsletter_service.py
yclients/services/online_bookings_service/: __init__.py  online_bookings_service.py
yclients/services/records_service/: __init__.py  records_service.py
yclients/services/services_service/: __init__.py  services_service.py
yclients/services/staff_schedule_service/: __init__.py  staff_schedule_service.py
yclients/services/user_records_service/: __init__.py  user_records_service.py
yclients/services/validation_service/: __init__.py  validation_service.py
(+48 files in other folders)
