[tool.poetry]
name = "ai-telegram-bot"
version = "0.0.1"
description = ""
authors = ["Evgeniy Doroshenko <kraspy@yandex.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.51.2"
python-dotenv = "^1.0.1"
orjson = "^3.10.7"
aiogram = "^3.13.1"
markdown = "^3.7"
beautifulsoup4 = "^4.12.3"
aiosqlite = "^0.20.0"
pydantic = "^2.9.2"
aioresponses = "^0.7.6"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
rich = "^13.9.2"
pytest = "^8.3.3"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.24.0"
pytest-rich = "^0.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
